Sources/gen/TdlParser.cpp

// Generated from Tdl.g4 by ANTLR 4.8


#include "TdlListener.h"
#include "TdlVisitor.h"

#include "TdlParser.h"


using namespace antlrcpp;
using namespace antlr4;

TdlParser::TdlParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

TdlParser::~TdlParser() {
  delete _interpreter;
}

std::string TdlParser::getGrammarFileName() const {
  return "Tdl.g4";
}

const std::vector<std::string>& TdlParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& TdlParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- TdlContext ------------------------------------------------------------------

TdlParser::TdlContext::TdlContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

TdlParser::ProgramContext* TdlParser::TdlContext::program() {
  return getRuleContext<TdlParser::ProgramContext>(0);
}

tree::TerminalNode* TdlParser::TdlContext::EOF() {
  return getToken(TdlParser::EOF, 0);
}

std::vector<TdlParser::Global_scopeContext *> TdlParser::TdlContext::global_scope() {
  return getRuleContexts<TdlParser::Global_scopeContext>();
}

TdlParser::Global_scopeContext* TdlParser::TdlContext::global_scope(size_t i) {
  return getRuleContext<TdlParser::Global_scopeContext>(i);
}

std::vector<TdlParser::Function_definitionContext *> TdlParser::TdlContext::function_definition() {
  return getRuleContexts<TdlParser::Function_definitionContext>();
}

TdlParser::Function_definitionContext* TdlParser::TdlContext::function_definition(size_t i) {
  return getRuleContext<TdlParser::Function_definitionContext>(i);
}


size_t TdlParser::TdlContext::getRuleIndex() const {
  return TdlParser::RuleTdl;
}

void TdlParser::TdlContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TdlListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterTdl(this);
}

void TdlParser::TdlContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TdlListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitTdl(this);
}


antlrcpp::Any TdlParser::TdlContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<TdlVisitor*>(visitor))
    return parserVisitor->visitTdl(this);
  else
    return visitor->visitChildren(this);
}

TdlParser::TdlContext* TdlParser::tdl() {
  TdlContext *_localctx = _tracker.createInstance<TdlContext>(_ctx, getState());
  enterRule(_localctx, 0, TdlParser::RuleTdl);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(59);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 0, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(56);
        global_scope(); 
      }
      setState(61);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 0, _ctx);
    }
    setState(65);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == TdlParser::FUNCTION) {
      setState(62);
      function_definition();
      setState(67);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(71);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << TdlParser::COLUMN)
      | (1ULL << TdlParser::FLOAT)
      | (1ULL << TdlParser::INT)
      | (1ULL << TdlParser::ROW)
      | (1ULL << TdlParser::STRING)
      | (1ULL << TdlParser::TABLE)
      | (1ULL << TdlParser::BOOL))) != 0)) {
      setState(68);
      global_scope();
      setState(73);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(74);
    program();
    setState(78);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << TdlParser::COLUMN)
      | (1ULL << TdlParser::FLOAT)
      | (1ULL << TdlParser::INT)
      | (1ULL << TdlParser::ROW)
      | (1ULL << TdlParser::STRING)
      | (1ULL << TdlParser::TABLE)
      | (1ULL << TdlParser::BOOL))) != 0)) {
      setState(75);
      global_scope();
      setState(80);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(81);
    match(TdlParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Global_scopeContext ------------------------------------------------------------------

TdlParser::Global_scopeContext::Global_scopeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

TdlParser::TypeContext* TdlParser::Global_scopeContext::type() {
  return getRuleContext<TdlParser::TypeContext>(0);
}

tree::TerminalNode* TdlParser::Global_scopeContext::NAME() {
  return getToken(TdlParser::NAME, 0);
}

tree::TerminalNode* TdlParser::Global_scopeContext::ASSIGN() {
  return getToken(TdlParser::ASSIGN, 0);
}

TdlParser::ExprContext* TdlParser::Global_scopeContext::expr() {
  return getRuleContext<TdlParser::ExprContext>(0);
}


size_t TdlParser::Global_scopeContext::getRuleIndex() const {
  return TdlParser::RuleGlobal_scope;
}

void TdlParser::Global_scopeContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TdlListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterGlobal_scope(this);
}

void TdlParser::Global_scopeContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TdlListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitGlobal_scope(this);
}


antlrcpp::Any TdlParser::Global_scopeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<TdlVisitor*>(visitor))
    return parserVisitor->visitGlobal_scope(this);
  else
    return visitor->visitChildren(this);
}

TdlParser::Global_scopeContext* TdlParser::global_scope() {
  Global_scopeContext *_localctx = _tracker.createInstance<Global_scopeContext>(_ctx, getState());
  enterRule(_localctx, 2, TdlParser::RuleGlobal_scope);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(83);
    type();
    setState(84);
    match(TdlParser::NAME);
    setState(87);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == TdlParser::ASSIGN) {
      setState(85);
      match(TdlParser::ASSIGN);
      setState(86);
      expr(0);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ProgramContext ------------------------------------------------------------------

TdlParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

TdlParser::BlockContext* TdlParser::ProgramContext::block() {
  return getRuleContext<TdlParser::BlockContext>(0);
}


size_t TdlParser::ProgramContext::getRuleIndex() const {
  return TdlParser::RuleProgram;
}

void TdlParser::ProgramContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TdlListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterProgram(this);
}

void TdlParser::ProgramContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TdlListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitProgram(this);
}


antlrcpp::Any TdlParser::ProgramContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<TdlVisitor*>(visitor))
    return parserVisitor->visitProgram(this);
  else
    return visitor->visitChildren(this);
}

TdlParser::ProgramContext* TdlParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 4, TdlParser::RuleProgram);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(89);
    match(TdlParser::T__0);
    setState(90);
    block();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TypeContext ------------------------------------------------------------------

TdlParser::TypeContext::TypeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* TdlParser::TypeContext::COLUMN() {
  return getToken(TdlParser::COLUMN, 0);
}

tree::TerminalNode* TdlParser::TypeContext::FLOAT() {
  return getToken(TdlParser::FLOAT, 0);
}

tree::TerminalNode* TdlParser::TypeContext::INT() {
  return getToken(TdlParser::INT, 0);
}

tree::TerminalNode* TdlParser::TypeContext::ROW() {
  return getToken(TdlParser::ROW, 0);
}

tree::TerminalNode* TdlParser::TypeContext::STRING() {
  return getToken(TdlParser::STRING, 0);
}

tree::TerminalNode* TdlParser::TypeContext::TABLE() {
  return getToken(TdlParser::TABLE, 0);
}

tree::TerminalNode* TdlParser::TypeContext::BOOL() {
  return getToken(TdlParser::BOOL, 0);
}


size_t TdlParser::TypeContext::getRuleIndex() const {
  return TdlParser::RuleType;
}

void TdlParser::TypeContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TdlListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterType(this);
}

void TdlParser::TypeContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TdlListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitType(this);
}


antlrcpp::Any TdlParser::TypeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<TdlVisitor*>(visitor))
    return parserVisitor->visitType(this);
  else
    return visitor->visitChildren(this);
}

TdlParser::TypeContext* TdlParser::type() {
  TypeContext *_localctx = _tracker.createInstance<TypeContext>(_ctx, getState());
  enterRule(_localctx, 6, TdlParser::RuleType);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(92);
    _la = _input->LA(1);
    if (!((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << TdlParser::COLUMN)
      | (1ULL << TdlParser::FLOAT)
      | (1ULL << TdlParser::INT)
      | (1ULL << TdlParser::ROW)
      | (1ULL << TdlParser::STRING)
      | (1ULL << TdlParser::TABLE)
      | (1ULL << TdlParser::BOOL))) != 0))) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Math_operatorContext ------------------------------------------------------------------

TdlParser::Math_operatorContext::Math_operatorContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* TdlParser::Math_operatorContext::PLUS() {
  return getToken(TdlParser::PLUS, 0);
}

tree::TerminalNode* TdlParser::Math_operatorContext::MINUS() {
  return getToken(TdlParser::MINUS, 0);
}

tree::TerminalNode* TdlParser::Math_operatorContext::MULTIPLY() {
  return getToken(TdlParser::MULTIPLY, 0);
}

tree::TerminalNode* TdlParser::Math_operatorContext::DIVISION() {
  return getToken(TdlParser::DIVISION, 0);
}

tree::TerminalNode* TdlParser::Math_operatorContext::ASSIGN() {
  return getToken(TdlParser::ASSIGN, 0);
}


size_t TdlParser::Math_operatorContext::getRuleIndex() const {
  return TdlParser::RuleMath_operator;
}

void TdlParser::Math_operatorContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TdlListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterMath_operator(this);
}

void TdlParser::Math_operatorContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TdlListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitMath_operator(this);
}


antlrcpp::Any TdlParser::Math_operatorContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<TdlVisitor*>(visitor))
    return parserVisitor->visitMath_operator(this);
  else
    return visitor->visitChildren(this);
}

TdlParser::Math_operatorContext* TdlParser::math_operator() {
  Math_operatorContext *_localctx = _tracker.createInstance<Math_operatorContext>(_ctx, getState());
  enterRule(_localctx, 8, TdlParser::RuleMath_operator);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(94);
    _la = _input->LA(1);
    if (!((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << TdlParser::PLUS)
      | (1ULL << TdlParser::MINUS)
      | (1ULL << TdlParser::MULTIPLY)
      | (1ULL << TdlParser::DIVISION)
      | (1ULL << TdlParser::ASSIGN))) != 0))) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Comparison_operatorContext ------------------------------------------------------------------

TdlParser::Comparison_operatorContext::Comparison_operatorContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* TdlParser::Comparison_operatorContext::EQUAL() {
  return getToken(TdlParser::EQUAL, 0);
}

tree::TerminalNode* TdlParser::Comparison_operatorContext::GREAT() {
  return getToken(TdlParser::GREAT, 0);
}

tree::TerminalNode* TdlParser::Comparison_operatorContext::GREAT_EQ() {
  return getToken(TdlParser::GREAT_EQ, 0);
}

tree::TerminalNode* TdlParser::Comparison_operatorContext::LESS() {
  return getToken(TdlParser::LESS, 0);
}

tree::TerminalNode* TdlParser::Comparison_operatorContext::LESS_EQ() {
  return getToken(TdlParser::LESS_EQ, 0);
}

tree::TerminalNode* TdlParser::Comparison_operatorContext::NOT_EQUAL() {
  return getToken(TdlParser::NOT_EQUAL, 0);
}


size_t TdlParser::Comparison_operatorContext::getRuleIndex() const {
  return TdlParser::RuleComparison_operator;
}

void TdlParser::Comparison_operatorContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TdlListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterComparison_operator(this);
}

void TdlParser::Comparison_operatorContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TdlListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitComparison_operator(this);
}


antlrcpp::Any TdlParser::Comparison_operatorContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<TdlVisitor*>(visitor))
    return parserVisitor->visitComparison_operator(this);
  else
    return visitor->visitChildren(this);
}

TdlParser::Comparison_operatorContext* TdlParser::comparison_operator() {
  Comparison_operatorContext *_localctx = _tracker.createInstance<Comparison_operatorContext>(_ctx, getState());
  enterRule(_localctx, 10, TdlParser::RuleComparison_operator);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(96);
    _la = _input->LA(1);
    if (!((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << TdlParser::EQUAL)
      | (1ULL << TdlParser::NOT_EQUAL)
      | (1ULL << TdlParser::LESS)
      | (1ULL << TdlParser::GREAT)
      | (1ULL << TdlParser::GREAT_EQ)
      | (1ULL << TdlParser::LESS_EQ))) != 0))) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- OpContext ------------------------------------------------------------------

TdlParser::OpContext::OpContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

TdlParser::Comparison_operatorContext* TdlParser::OpContext::comparison_operator() {
  return getRuleContext<TdlParser::Comparison_operatorContext>(0);
}

TdlParser::Math_operatorContext* TdlParser::OpContext::math_operator() {
  return getRuleContext<TdlParser::Math_operatorContext>(0);
}


size_t TdlParser::OpContext::getRuleIndex() const {
  return TdlParser::RuleOp;
}

void TdlParser::OpContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TdlListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterOp(this);
}

void TdlParser::OpContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TdlListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitOp(this);
}


antlrcpp::Any TdlParser::OpContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<TdlVisitor*>(visitor))
    return parserVisitor->visitOp(this);
  else
    return visitor->visitChildren(this);
}

TdlParser::OpContext* TdlParser::op() {
  OpContext *_localctx = _tracker.createInstance<OpContext>(_ctx, getState());
  enterRule(_localctx, 12, TdlParser::RuleOp);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(100);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case TdlParser::EQUAL:
      case TdlParser::NOT_EQUAL:
      case TdlParser::LESS:
      case TdlParser::GREAT:
      case TdlParser::GREAT_EQ:
      case TdlParser::LESS_EQ: {
        enterOuterAlt(_localctx, 1);
        setState(98);
        comparison_operator();
        break;
      }

      case TdlParser::PLUS:
      case TdlParser::MINUS:
      case TdlParser::MULTIPLY:
      case TdlParser::DIVISION:
      case TdlParser::ASSIGN: {
        enterOuterAlt(_localctx, 2);
        setState(99);
        math_operator();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Row_exprContext ------------------------------------------------------------------

TdlParser::Row_exprContext::Row_exprContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* TdlParser::Row_exprContext::OPEN_BRACKET() {
  return getToken(TdlParser::OPEN_BRACKET, 0);
}

tree::TerminalNode* TdlParser::Row_exprContext::CLOSE_BRACKET() {
  return getToken(TdlParser::CLOSE_BRACKET, 0);
}

std::vector<TdlParser::ExprContext *> TdlParser::Row_exprContext::expr() {
  return getRuleContexts<TdlParser::ExprContext>();
}

TdlParser::ExprContext* TdlParser::Row_exprContext::expr(size_t i) {
  return getRuleContext<TdlParser::ExprContext>(i);
}


size_t TdlParser::Row_exprContext::getRuleIndex() const {
  return TdlParser::RuleRow_expr;
}

void TdlParser::Row_exprContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TdlListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterRow_expr(this);
}

void TdlParser::Row_exprContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TdlListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitRow_expr(this);
}


antlrcpp::Any TdlParser::Row_exprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<TdlVisitor*>(visitor))
    return parserVisitor->visitRow_expr(this);
  else
    return visitor->visitChildren(this);
}

TdlParser::Row_exprContext* TdlParser::row_expr() {
  Row_exprContext *_localctx = _tracker.createInstance<Row_exprContext>(_ctx, getState());
  enterRule(_localctx, 14, TdlParser::RuleRow_expr);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(102);
    match(TdlParser::OPEN_BRACKET);
    setState(106);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << TdlParser::TRUE)
      | (1ULL << TdlParser::FALSE)
      | (1ULL << TdlParser::SCAN)
      | (1ULL << TdlParser::CAST)
      | (1ULL << TdlParser::NAME)
      | (1ULL << TdlParser::INTEGER_CONSTANT)
      | (1ULL << TdlParser::FLOAT_CONSTANT)
      | (1ULL << TdlParser::STRING_LITERAL)
      | (1ULL << TdlParser::OPEN_PARENTHESIS)
      | (1ULL << TdlParser::OPEN_BRACKET)
      | (1ULL << TdlParser::OPEN_BRACE)
      | (1ULL << TdlParser::NEGATION))) != 0)) {
      setState(103);
      expr(0);
      setState(108);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(109);
    match(TdlParser::CLOSE_BRACKET);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Table_exprContext ------------------------------------------------------------------

TdlParser::Table_exprContext::Table_exprContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* TdlParser::Table_exprContext::OPEN_BRACE() {
  return getToken(TdlParser::OPEN_BRACE, 0);
}

tree::TerminalNode* TdlParser::Table_exprContext::CLOSE_BRACE() {
  return getToken(TdlParser::CLOSE_BRACE, 0);
}

std::vector<TdlParser::ExprContext *> TdlParser::Table_exprContext::expr() {
  return getRuleContexts<TdlParser::ExprContext>();
}

TdlParser::ExprContext* TdlParser::Table_exprContext::expr(size_t i) {
  return getRuleContext<TdlParser::ExprContext>(i);
}


size_t TdlParser::Table_exprContext::getRuleIndex() const {
  return TdlParser::RuleTable_expr;
}

void TdlParser::Table_exprContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TdlListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterTable_expr(this);
}

void TdlParser::Table_exprContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TdlListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitTable_expr(this);
}


antlrcpp::Any TdlParser::Table_exprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<TdlVisitor*>(visitor))
    return parserVisitor->visitTable_expr(this);
  else
    return visitor->visitChildren(this);
}

TdlParser::Table_exprContext* TdlParser::table_expr() {
  Table_exprContext *_localctx = _tracker.createInstance<Table_exprContext>(_ctx, getState());
  enterRule(_localctx, 16, TdlParser::RuleTable_expr);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(111);
    match(TdlParser::OPEN_BRACE);
    setState(115);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << TdlParser::TRUE)
      | (1ULL << TdlParser::FALSE)
      | (1ULL << TdlParser::SCAN)
      | (1ULL << TdlParser::CAST)
      | (1ULL << TdlParser::NAME)
      | (1ULL << TdlParser::INTEGER_CONSTANT)
      | (1ULL << TdlParser::FLOAT_CONSTANT)
      | (1ULL << TdlParser::STRING_LITERAL)
      | (1ULL << TdlParser::OPEN_PARENTHESIS)
      | (1ULL << TdlParser::OPEN_BRACKET)
      | (1ULL << TdlParser::OPEN_BRACE)
      | (1ULL << TdlParser::NEGATION))) != 0)) {
      setState(112);
      expr(0);
      setState(117);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(118);
    match(TdlParser::CLOSE_BRACE);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- If_bodyContext ------------------------------------------------------------------

TdlParser::If_bodyContext::If_bodyContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* TdlParser::If_bodyContext::IF() {
  return getToken(TdlParser::IF, 0);
}

TdlParser::ExprContext* TdlParser::If_bodyContext::expr() {
  return getRuleContext<TdlParser::ExprContext>(0);
}

TdlParser::BlockContext* TdlParser::If_bodyContext::block() {
  return getRuleContext<TdlParser::BlockContext>(0);
}

TdlParser::Else_bodyContext* TdlParser::If_bodyContext::else_body() {
  return getRuleContext<TdlParser::Else_bodyContext>(0);
}


size_t TdlParser::If_bodyContext::getRuleIndex() const {
  return TdlParser::RuleIf_body;
}

void TdlParser::If_bodyContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TdlListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterIf_body(this);
}

void TdlParser::If_bodyContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TdlListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitIf_body(this);
}


antlrcpp::Any TdlParser::If_bodyContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<TdlVisitor*>(visitor))
    return parserVisitor->visitIf_body(this);
  else
    return visitor->visitChildren(this);
}

TdlParser::If_bodyContext* TdlParser::if_body() {
  If_bodyContext *_localctx = _tracker.createInstance<If_bodyContext>(_ctx, getState());
  enterRule(_localctx, 18, TdlParser::RuleIf_body);
  size_t _la = 0;
